<resources>
    <string name="app_name">Savepoint</string>
    <string name="test_game_name">Fun Game</string>

    <string name="settings_menu_item">Settings</string>
    <string name="about_menu_item">About</string>

    <string name="add_entry_button_description">Add Entry</string>

    <string name="fab_label_add_note_entry">Add Note Entry</string>

    <string name="create_note_title">Title</string>
    <string name="create_note_desc">Description</string>
    <string name="create_note_info">Additional Info</string>
    <string name="create_note_add_info">Add Info</string>
    <string name="create">Create</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_info_key">Info name</string>
    <string name="default_info_value">Add description…</string>
</resources>
